# elm-talk

./: .gitignore  README.md  elm-package.json  summary.md
00_hello_world/: .gitignore  README.md
01_tutorial/: 01_the_essential.elm  07_interop.html  08_tasks.elm  09_tasks_deux.elm  10_decode.elm  12_app.elm  12_start_app_revisited.elm  13_effects.elm  99_app.elm  99_data_types.elm  99_mark.elm  99_some_decoding.elm  README.md  elm-package.json  interop.js
01_what_is_high_level/: .gitignore  00_the_irrelevant.html  01_the_essential.elm  02_remembering_the_past.elm  02_the_elm_architecture.elm  03_composing_signals.elm  03_remembering_the_past.elm  04_composing_signals.elm  05_creating_signals.elm  05_mailboxes.elm  06_user_input.elm  07_interop.elm  07_interop.html  07_tasks.elm  99_check.elm  99_data_types.elm  99_fp.elm  99_ports.elm  99_ports.html  README.md  elm-package.json  start-app.elm
02_exercises/: 1.elm  2.elm
03_asd/: asdasd.elm  index.html
03_buggy/: buggy.elm
04_snappy/: Makefile  gulpfile.js  package.json  site_key.txt  snappy.cabal  stack.yaml
04_snappy/snaplets/heist/templates/: base.tpl
04_snappy/src/: Application.hs  Site.hs
04_snappy/src-elm/: Main.elm  Makefile  elm-package.json  index.html
05_mascot/: Makefile  elm-package.json  mascot.cabal  stack.yaml
05_mascot/app/: Main.hs
05_mascot/src/: Lib.hs
05_mascot/src-elm/: Main.elm
other-stuff/: circle-at-mouse.elm  dots.elm  spinning-circle.elm
slides/: .gitignore  Makefile  beam.tex  generic.tex
